--- a/src/ECommerce.Web/wwwroot/css/site.css
+++ b/src/ECommerce.Web/wwwroot/css/site.css
@@ -39,6 +39,32 @@
   border-right: 0;
 }
 
+/* Hide default number input spinners for cleaner UI */
+.quantity-input::-webkit-outer-spin-button,
+.quantity-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.quantity-input[type=number] {
+  -moz-appearance: textfield;
+}
+
+/* Better disabled state for qty buttons */
+.btn-qty:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+  transform: none;
+}
+
+/* Make the remove button round and aligned */
+.btn-remove-item {
+  width: 36px;
+  height: 36px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .quantity-input:focus {
   box-shadow: none;
   border-color: #dee2e6;
